--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
         "ostream": "cpp",
         "unordered_map": "cpp",
         "iostream": "cpp",
-        "climits": "cpp"
+        "climits": "cpp",
+        "new": "cpp"
     },
     "C_Cpp.errorSquiggles": "enabled"
 }
