--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,8 @@
         "unordered_map": "cpp",
         "iostream": "cpp",
         "climits": "cpp",
-        "new": "cpp"
+        "new": "cpp",
+        "map": "cpp"
     },
     "C_Cpp.errorSquiggles": "enabled"
 }
